fix(statistics): add align center for icons' div

--- a/src/assets/styles/components/Cards.module.css
+++ b/src/assets/styles/components/Cards.module.css
@@ -18,7 +18,7 @@
     flex: 1 1 calc(33.3% - 1rem);
 }
 
-.statisticCard,
+.statisticCard div,
 .detailCard div {
     align-self: center;
 }
